# klft

./: .gitignore  .gitmodules  .nvim.lua  .tmp  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  HMC.hpp  LICENSE  README.md  Session.vim  diff.txt  hmc.cpp  hmc_log  hmc_ptbc.cpp  input.yaml  metropolis.cpp  new_test.yaml  ptbc_log  temp  test_yaml.yaml  tests.cpp
arc/binaries_20250708/: Makefile  b25.yaml  b30.yaml  b35.yaml  b40.yaml  b45.yaml  b50.yaml  cmake_install.cmake  plaquette_output25.txt  plaquette_output30.txt  plaquette_output35.txt  simulation_logb25.txt  test_yaml.yaml  tmp.sh
benchmarks/: CMakeLists.txt
benchmarks/Gauge/: CMakeLists.txt  metropolis_bench.cpp  plaq.cpp  plaq_bench.cpp  wloop_temporal_bench.cpp
binaries/: CMakeLists.txt  hmc.cpp  jtbc.cpp  metropolis.cpp  ptbc.cpp
include/: ActionDensity.hpp  AdjointField.hpp  AdjointFieldHelper.hpp  AdjointGroup.hpp  AdjointSUN.hpp  Cooling.hpp  DefectParams.hpp  DiracOPTypeHelper.hpp  DiracOperator.hpp  FermionMonomial.hpp  FermionMonomialEO.hpp  FermionObservable.hpp  FermionParams.hpp  Field.hpp  FieldStrengthTensor.hpp  FieldTypeHelper.hpp  GDiracOperator.hpp  GLOBAL.hpp  GammaMatrix.hpp  GaugeAction.hpp  GaugeField.hpp  GaugeFieldHelper.hpp  GaugeGroup.hpp  GaugeInvariance.hpp  GaugeMonomial.hpp  GaugeObservable.hpp  GaugePlaquette.hpp  GaugeVector.hpp  Gauge_Params.hpp  Gauge_Util.hpp  HMC.hpp  HMC_OLD.hpp  HMC_Params.hpp  HamiltonianField.hpp  IOHelperFunctions.hpp  IOParams.hpp  IndexHelper.hpp  InputParser.hpp  InputParser.hpp.old  Integrator.hpp  (+39 more)
lib/: CMakeLists.txt  HMC_SU2.cpp  HMC_SU2_PTBC.cpp  HMC_SU3.cpp  HMC_U1.cpp  HMC_exec.cpp  HMC_exec.cpp.old  HMC_exec.hpp  HMC_exec.hpp.old  JTBC.cpp  Metropolis.cpp  Metropolis_SU2.cpp  Metropolis_SU3.cpp  Metropolis_U1.cpp  PTBC.cpp  klft.cpp  writeToFile.cpp
tests/: CMakeLists.txt  adaptive_wilson_flow_verify.cpp  cooling_test.cpp  gauge_inv_test_Topo.cpp  gauge_inv_test_action_density.cpp  gauge_inv_test_staples.cpp  reversability_test.cpp  test_IO.cpp  topo_improved_test.cpp  topo_improved_test.hpp  wilsonflow_improv_testing.cpp  wilsonflow_improv_testing.hpp  wilsonflow_sp_test.cpp  wilsonflow_sp_test.hpp  wilsonflow_test.cpp
tests/Fermions/: CMakeLists.txt  test_DiracOperator.cpp  test_GDircOperator.cpp  test_Solver.cpp  test_Solver_EO.cpp  test_SpinorFields.cpp  test_gamma_matricies.cpp  test_spam.cpp  test_spinor.cpp
tests/Gauge/: CMakeLists.txt  quda_wflow_test.cpp  test_wflow.cpp
tests/GaugeSU2/: test_metropolis_SU2.cpp  test_plaq_SU2.cpp
tests/GaugeSU3/: test_metropolis_SU3.cpp  test_plaq_SU3.cpp
tests/GaugeU1/: test_metropolis_U1.cpp  test_plaq_U1.cpp
tests/Group/: CMakeLists.txt  test_SUNAdj_conv.cpp
tests/PTBCCompileTests/: CMakeLists.txt  test_PTBCGaugeFields.cpp
